--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -53,11 +53,26 @@
         </div>
 
         <div class="footer-column">
-          <h4>Legal</h4>
+          <h4>Support</h4>
           <ul>
-            <li><a href="/pages/terms">Terms of Service</a></li>
-            <li><a href="/pages/privacy">Privacy Policy</a></li>
-            <li><a href="/pages/refund">Refund Policy</a></li>
+            <li>
+              <a href="mailto:support@marketsniper.pro">
+                <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                  <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"/>
+                  <polyline points="22,6 12,13 2,6"/>
+                </svg>
+                support@marketsniper.pro
+              </a>
+            </li>
+            <li>
+              <a href="mailto:jesseolson@marketsniper.pro">
+                <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                  <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"/>
+                  <polyline points="22,6 12,13 2,6"/>
+                </svg>
+                jesseolson@marketsniper.pro
+              </a>
+            </li>
           </ul>
         </div>
       </div>
@@ -112,7 +127,7 @@
   }
 
   .footer-brand .tagline {
-    color: #00d4ff;
+    color: rgba(255, 255, 255, 0.7);
     font-size: 1rem;
     line-height: 1.6;
     max-width: 350px;
